tests/expectations/compiler/constructor/calls_in_constructors_fail.out
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
    --> compiler-test:10:9
     |
  10 |         foo(true);
     |         ^^^^^^^^^
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
    --> compiler-test:11:9
     |
  11 |         bar();
     |         ^^^^^
